# hcn

./: .__init__.py.swp  .gitignore  1.ipynb  HG.py  LICENSE  README.md  __init__.py  abs_fft.py  cache.py  cgh.py  decorators.py  di.py  futils.py  fx.csv  fx2.npy.old  grapher.py  justfile  laser.py  macro.py  mkdocs.yml  plotter.py  plotter.py.bak  plotter.pyi  plotter.pyi.bak  plotter_temp.py  pyproject.toml  qcmos.py  quantum_workstation.py  sample.ipynb  simulations.py  spade.py  style_example.ipynb  temp_code.py  trashbin
.github/workflows/: docs.yml  mkdocs.yml  python-publish.yml
__legacy__/: _FreqEst.py  _TDEst.py  lse.py
__legacy__/FreqEst.old/: __init__.py  common.py  di.py  spade.py
__legacy__/displacement_est/: __init__.py  di.py  spade.py
__legacy__/simulations/: __init__.py
assets/: draft.mplstyle  group_wiki_style.mplstyle
assets/mplstyle/: draft.mplstyle  matlab_style.py  paper.mplstyle
bak/: futils.py  laser.py  photosutils.py  plotter.py  plotter.pyi  trashbin
bak/assets/mplstyle/: draft.mplstyle  group_wiki_style.mplstyle
bak/cryptutils/: __init__.py  cpuid.py
bak/dev/io/FileLoader/: FileLoader.py
bak/ezmail/: core.py
bak/legacy/: utils.py
bak/legacy/FreqEst.old/: common.py  spade.py
bak/legacy/cgh/: __init__.py
bak/legacy/equipments.old/: qcmos.py
bak/legacy/experiments.old/: params.py  utils.py
cryptutils/: crypt.py
dev/: password.py
dev/io/: __init__.py
dev/io/FileLoader/: __init__.py
docs/: cache.ipynb  home.ipynb  index.ipynb  index.md  io.ipynb  parallelize.ipynb  preamble.ipynb
equipments/: __init__.py  dmd.py  lamp.py  qcmos.py  qe_fitting.ipynb  slm.py  workstation.py
experiments/: _DataReader.py  _FreqEst.py  _TDEst.py  __init__.py  bound.py  cgh.py  common.py  core.py  di.py  di_improved.py  di_sample.py  di_simple.py  lse.py  params.py  psf.py  spade.py  spade_simple.py
experiments/freq_est/: __init__.py  common.py  di.py  lse.py  spade.py  utils.py.old
experiments/new/: bound.py  common.py  di.py  lse.py.old  spade.py
ezmail/: __init__.py  core.py
legacy/: _DataReader.py  utils.py
legacy/FreqEst.old/: __init__.py  bound.py
legacy/tk_gui/: file_selector.py
simulations/: __init__.py
spadeutils/: __init__.py  core.py
src/hcn/: __init__.py  preamble.py
src/hcn/assets/: matlab_style.py
src/hcn/io/: core.py
src/hcn/utils/: cache.py  crypt.py  ezmail.py
test/: test.ipynb
tk_gui/: file converter.py
