[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"] 
build-backend = "setuptools.build_meta"


[project]
name = "hcn"
description = "HCN's Collections of Nonpareils (or Nonsense)"
dynamic = ["version"] 
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "gitpython",
    "setuptools_scm"
]

readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools_scm]
local_scheme = "no-local-version"
