[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "hcn"
description = "HCN's Collections of Nonpareils (or Nonsense)"
dynamic = ["version"]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "gitpython",
    "tqdm",
    "imageio[tifffile,ffmpeg]",
    "packaging"
]

readme = "README.md"
license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-jupyter"
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["hcn*"]


[tool.setuptools_scm]
local_scheme = "no-local-version"
