[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "hcn"
description = "HCN's Collections of Nonpareils (or Nonsense)"
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Chao-Ning Hu" }
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "dask[distributed]",
    "gitpython",
    "tqdm",
    "imageio[tifffile,ffmpeg]",
    "packaging"
]


[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-jupyter"
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["hcn*"]


[tool.setuptools_scm]
local_scheme = "no-local-version"
